objects/Display_Related_Fields__mdt.object
<CustomObject>
    <description>Settings for Display Related Fields LWC.</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>Type of operation that will be performed to fetch the fields value.</description>
        <inlineHelpText>Type of operation that will be performed to fetch the fields value.</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOQL</fullName>
                    <default>true</default>
                    <label>SOQL</label>
                </value>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Execute the action based on the Action Type.</description>
        <inlineHelpText>Execute the action based on the Action Type.</inlineHelpText>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields_Display_Order__c</fullName>
        <description>The order you would like to use to display the fields on the LWC.</description>
        <inlineHelpText>The order you would like to use to display the fields on the LWC.</inlineHelpText>
        <label>Fields Display Order</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Display Related Fields Setting</label>
    <pluralLabel>Display Related Fields Settings</pluralLabel>
</CustomObject>